--- a/Pytorch/xNetCIFAR10/config.json
+++ b/Pytorch/xNetCIFAR10/config.json
@@ -1,10 +1,11 @@
 {
-  "batch_size": 80,
+  "batch_size": 60,
+  "class_num": 10,
   "device": "cuda",
-  "epoch": 180,
+  "epoch": 50,
   "lr": 0.001,
   "log_dir": "./log/",
   "dataset_path": "./Dataset/CIFAR10/",
   "checkpoint_path": "./ouput/",
-  "checkpoint_svae": 10
+  "checkpoint_svae": 20
 }
